--- a/19june.ipynb
+++ b/19june.ipynb
@@ -334,9 +334,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec7e9b0f-0f04-4457-830f-135c9c3f96e1",
+   "metadata": {},
+   "source": [
+    "# AVL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "60e9ddfb-303d-4293-8321-e2382d297f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inorder traversal of the AVL tree:\n",
+      "10 20 25 30 40 50 "
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.val = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.height = 1\n",
+    "\n",
+    "def inorder(root):\n",
+    "    if root is None:\n",
+    "        return\n",
+    "    inorder(root.left)\n",
+    "    print(root.val, end=' ')\n",
+    "    inorder(root.right)\n",
+    "\n",
+    "# Rest of your AVL tree code remains unchanged...\n",
+    "\n",
+    "    \n",
+    "def get_height(node):\n",
+    "    if not node:\n",
+    "        return 0\n",
+    "    return node.height\n",
+    "\n",
+    "def get_balance_factor(node):\n",
+    "    if not node:\n",
+    "        return 0\n",
+    "    return get_height(node.left) - get_height(node.right)\n",
+    "\n",
+    "def right_rotate(y):\n",
+    "    x = y.left\n",
+    "    T = x.right\n",
+    "\n",
+    "    x.right = y\n",
+    "    y.left = T\n",
+    "\n",
+    "    y.height = 1 + max(get_height(y.left), get_height(y.right))\n",
+    "    x.height = 1 + max(get_height(x.left), get_height(x.right))\n",
+    "\n",
+    "    return x\n",
+    "\n",
+    "def left_rotate(x):\n",
+    "    y = x.right\n",
+    "    T = y.left\n",
+    "\n",
+    "    y.left = x\n",
+    "    x.right = T\n",
+    "\n",
+    "    x.height = 1 + max(get_height(x.left), get_height(x.right))\n",
+    "    y.height = 1 + max(get_height(y.left), get_height(y.right))\n",
+    "\n",
+    "    return y\n",
+    "\n",
+    "def insert(root, key):\n",
+    "    if not root:\n",
+    "        return Node(key)\n",
+    "\n",
+    "    if key < root.val:\n",
+    "        root.left = insert(root.left, key)\n",
+    "    else:\n",
+    "        root.right = insert(root.right, key)\n",
+    "\n",
+    "    root.height = 1 + max(get_height(root.left), get_height(root.right))\n",
+    "\n",
+    "    balance = get_balance_factor(root)\n",
+    "\n",
+    "    if balance > 1 and key < root.left.val:\n",
+    "        return right_rotate(root)\n",
+    "\n",
+    "    if balance < -1 and key > root.right.val:\n",
+    "        return left_rotate(root)\n",
+    "\n",
+    "    if balance > 1 and key > root.left.val:\n",
+    "        root.left = left_rotate(root.left)\n",
+    "        return right_rotate(root)\n",
+    "\n",
+    "    if balance < -1 and key < root.right.val:\n",
+    "        root.right = right_rotate(root.right)\n",
+    "        return left_rotate(root)\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Example usage:\n",
+    "root = None\n",
+    "keys = [10, 20, 30, 40, 50, 25]\n",
+    "for key in keys:\n",
+    "    root = insert(root, key)\n",
+    "\n",
+    "print(\"Inorder traversal of the AVL tree:\")\n",
+    "inorder(root)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3e7629-1281-4e40-a2ad-fc6a5e08aaa4",
+   "id": "74204db4-d175-4864-a4a9-33ce7cf3884b",
    "metadata": {},
    "outputs": [],
    "source": []
